Add more simulations